// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Piano Should render a correct Piano 1`] = `
<body>
  <div>
    <div>
      <svg
        viewBox="0 0 400 150"
        width="400"
      >
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 0 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="C"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="0"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="28.571428571428573"
            y="140"
          >
            C
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 57.142857142857146 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="D"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="57.142857142857146"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="85.71428571428572"
            y="140"
          >
            D
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key "
            d="M 42.85714285714286 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Db"
            data-octave="lower"
            data-sharp="C#"
            rx="5.714285714285715"
            ry="7.5"
            x="42.85714285714286"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="57.142857142857146"
            y="63.75"
          >
            D
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="57.142857142857146"
            y="83.75"
          >
            C
            ♯
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 114.28571428571429 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="E"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="114.28571428571429"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="142.85714285714286"
            y="140"
          >
            E
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key "
            d="M 100 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Eb"
            data-octave="lower"
            data-sharp="D#"
            rx="5.714285714285715"
            ry="7.5"
            x="100"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="114.28571428571429"
            y="63.75"
          >
            E
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="114.28571428571429"
            y="83.75"
          >
            D
            ♯
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 171.42857142857144 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="F"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="171.42857142857144"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="200.00000000000003"
            y="140"
          >
            F
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 228.57142857142858 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="G"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="228.57142857142858"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="257.14285714285717"
            y="140"
          >
            G
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key "
            d="M 214.28571428571428 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Gb"
            data-octave="lower"
            data-sharp="F#"
            rx="5.714285714285715"
            ry="7.5"
            x="214.28571428571428"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="228.57142857142856"
            y="63.75"
          >
            G
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="228.57142857142856"
            y="83.75"
          >
            F
            ♯
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 285.7142857142857 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="A"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="285.7142857142857"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="314.2857142857143"
            y="140"
          >
            A
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key "
            d="M 271.42857142857144 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Ab"
            data-octave="lower"
            data-sharp="G#"
            rx="5.714285714285715"
            ry="7.5"
            x="271.42857142857144"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="285.7142857142857"
            y="63.75"
          >
            A
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="285.7142857142857"
            y="83.75"
          >
            G
            ♯
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 342.8571428571429 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="B"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="342.8571428571429"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="371.42857142857144"
            y="140"
          >
            B
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key "
            d="M 328.5714285714286 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Bb"
            data-octave="lower"
            data-sharp="A#"
            rx="5.714285714285715"
            ry="7.5"
            x="328.5714285714286"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="342.8571428571429"
            y="63.75"
          >
            B
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="342.8571428571429"
            y="83.75"
          >
            A
            ♯
          </text>
        </g>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Piano displayHighlight Should highlight 1 natural, 1 sharp and 1 flat note 1`] = `
<body>
  <div>
    <div>
      <svg
        viewBox="0 0 400 150"
        width="400"
      >
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key show"
            d="M 0 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="C"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="0"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="28.571428571428573"
            y="140"
          >
            C
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 57.142857142857146 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="D"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="57.142857142857146"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="85.71428571428572"
            y="140"
          >
            D
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key "
            d="M 42.85714285714286 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Db"
            data-octave="lower"
            data-sharp="C#"
            rx="5.714285714285715"
            ry="7.5"
            x="42.85714285714286"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="57.142857142857146"
            y="63.75"
          >
            D
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="57.142857142857146"
            y="83.75"
          >
            C
            ♯
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 114.28571428571429 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="E"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="114.28571428571429"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="142.85714285714286"
            y="140"
          >
            E
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key show"
            d="M 100 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Eb"
            data-octave="lower"
            data-sharp="D#"
            rx="5.714285714285715"
            ry="7.5"
            x="100"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="114.28571428571429"
            y="63.75"
          >
            E
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="114.28571428571429"
            y="83.75"
          >
            D
            ♯
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 171.42857142857144 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="F"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="171.42857142857144"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="200.00000000000003"
            y="140"
          >
            F
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 228.57142857142858 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="G"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="228.57142857142858"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="257.14285714285717"
            y="140"
          >
            G
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key show"
            d="M 214.28571428571428 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Gb"
            data-octave="lower"
            data-sharp="F#"
            rx="5.714285714285715"
            ry="7.5"
            x="214.28571428571428"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="228.57142857142856"
            y="63.75"
          >
            G
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="228.57142857142856"
            y="83.75"
          >
            F
            ♯
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 285.7142857142857 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="A"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="285.7142857142857"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="314.2857142857143"
            y="140"
          >
            A
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key "
            d="M 271.42857142857144 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Ab"
            data-octave="lower"
            data-sharp="G#"
            rx="5.714285714285715"
            ry="7.5"
            x="271.42857142857144"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="285.7142857142857"
            y="63.75"
          >
            A
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="285.7142857142857"
            y="83.75"
          >
            G
            ♯
          </text>
        </g>
        <g
          width="57.142857142857146"
        >
          <path
            class="whiteKey key "
            d="M 342.8571428571429 0 v 142.5 q 0 7.5 5.714285714285715 7.5 h 45.714285714285715 q 5.714285714285715 0 5.714285714285715 -7.5 v -142.5 Z"
            data-natural="B"
            data-octave="lower"
            rx="5.714285714285715"
            ry="7.5"
            x="342.8571428571429"
          />
          <text
            class="whiteKeyText"
            text-anchor="middle"
            x="371.42857142857144"
            y="140"
          >
            B
          </text>
        </g>
        <g
          width="28.571428571428573"
        >
          <path
            class="blackKey key "
            d="M 328.5714285714286 0 v 86.25 q 0 7.5 5.714285714285715 7.5 h 17.142857142857142 q 5.714285714285715 0 5.714285714285715 -7.5 v -86.25 Z"
            data-flat="Bb"
            data-octave="lower"
            data-sharp="A#"
            rx="5.714285714285715"
            ry="7.5"
            x="328.5714285714286"
          />
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="342.8571428571429"
            y="63.75"
          >
            B
            ♭
          </text>
          <text
            class="blackKeyText"
            text-anchor="middle"
            x="342.8571428571429"
            y="83.75"
          >
            A
            ♯
          </text>
        </g>
      </svg>
    </div>
  </div>
</body>
`;
